The register part needs refatoring.

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       content="Authentication login with ReactJS"
     />
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <title>Authentication Project</title>
   </head>
